Avance con errores

--- a/src/app/pages/company/company-offer/company-offer.component.html
+++ b/src/app/pages/company/company-offer/company-offer.component.html
@@ -43,7 +43,7 @@
                         </svg>
                       </button>
                       <button type="button" class="btn btn-warning mr-2">
-                        <svg class="bi text-white" width="26" height="26" fill="currentColor" (click)=offerDuplicate(offerD)>
+                        <svg class="bi text-white" width="26" height="26" fill="currentColor" (click)=offerDuplicate(offer)>
                           <use xlink:href="bootstrap-icons.svg#files" />
                         </svg>
                       </button>
