Validación y redirección según rol

--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -30,6 +30,9 @@
         &:hover {
             color: #fff;
             background-color: #48909b;
+            > svg {
+                color: #fff !important;
+            }
         }
       }
       
