--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,18 +9,20 @@
                 <form [formGroup]="newLogin" (ngSubmit)="onSubmit()">
                     <div class="form-group">
                       <label>Email</label>
-                      <input type="text" formControlName="email" class="form-control"/>
+                      <input type="email" formControlName="email" class="form-control"[class]="isValidField('email')" />
                       <div *ngIf="submitted && form.email.errors">
                         <div>El usuario: </div>
                         <div *ngIf="form.email.errors.required">No puede estar vacío</div>
+                        <div *ngIf="form.email.errors.pattern">Dirección de correo no valida</div>
                       </div>
                     </div>
                     <div class="form-group">
                       <label>Password</label>
-                      <input type="text" formControlName="password" class="form-control"/>
+                      <input type="password" formControlName="password" class="form-control" [class]="isValidField('password')"/>
                       <div *ngIf="submitted && form.password.errors">
                         <div>La password: </div>
                         <div *ngIf="form.password.errors.required">No puede estar vacío</div>
+                        <div *ngIf="form.password.errors?.min">Longuitud mínima 8 caracteres</div>
                       </div>
                     </div>
             
