--- a/src/app/pages/company/company-offer/company-offer.component.html
+++ b/src/app/pages/company/company-offer/company-offer.component.html
@@ -18,7 +18,13 @@
           <!-- Card with offer -->
           <div class="card w-100 mb-4 shadow">
             <div class="card-header bg-info">
-              <h2 class="card-title text-white font-weight-bold my-2">Ofertas publicadas</h2>
+              <div class="d-flex align-items-center">
+                <h2 class="card-title text-white font-weight-bold my-2 mr-3">Ofertas</h2>
+                <div class="custom-control custom-switch">
+                  <input type="checkbox" class="custom-control-input" id="isActiveOffer" checked>
+                  <label class="custom-control-label" for="isActiveOffer">Toggle this switch element</label>
+                </div>
+              </div>
               <a class="rounded-circle position-absolute border border-white bg-info" (click)=offerNew()>
                 <svg class="bi text-white" width="32" height="32" fill="currentColor">
                   <use xlink:href="bootstrap-icons.svg#plus" />
