--- a/src/app/pages/company/company-offer/company-offer.component.html
+++ b/src/app/pages/company/company-offer/company-offer.component.html
@@ -3,9 +3,9 @@
   <!-- Sidebar -->
   <app-sidebar></app-sidebar>
 
-  <!-- Page Content -->
+  <!-- Contenido de la pagina -->
   <div id="page-content-wrapper">
-    <!-- Button close Sidebar -->
+    <!-- Botón para cerrar el sidebar -->
     <a class="btn" id="menu-toggle">
       <svg class="bi text-info" width="32" height="32" fill="currentColor">
         <use xlink:href="bootstrap-icons.svg#grid-3x3-gap" />
@@ -15,14 +15,14 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col">
-          <!-- Card with offer -->
+          <!-- Cuerpo de las ofertas -->
           <div class="card w-100 mb-4 shadow">
             <div class="card-header bg-info">
               <div class="d-flex align-items-center">
                 <h2 class="card-title text-white font-weight-bold my-2 mr-3">Ofertas</h2>
                 <div class="custom-control custom-switch">
                   <input type="checkbox" class="custom-control-input" id="isActiveOffer" checked>
-                  <label class="custom-control-label" for="isActiveOffer">Toggle this switch element</label>
+                  <label class="custom-control-label" for="isActiveOffer">Ofertas Activas</label>
                 </div>
               </div>
               <a class="rounded-circle position-absolute border border-white bg-info" (click)=offerNew()>
@@ -32,32 +32,58 @@
               </a>
             </div>
             <div class="card-body mt-2">
-              <!-- Card with offer -->
+              <!-- Oferta -->
               <div class="row">
                 <div class="col-sm-6" *ngFor="let offer of offers; index as i">
-                  <div class="card mb-4 border-info shadow">
+                  <div class="card m-2 mb-4 border-info shadow">
                     <div class="card-header bg-info text-white">
-                      <h5 class="card-title mb-0">{{ offer.name }}</h5>
+                      <h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}</h3>
+                      <span class="badge badge-light text-info mr-2">{{ offer.areaDescription }}</span>
+                      <span class="text-white font-weight-bolder">Vacantes: {{ offer.vacant }}</span>
                     </div>
                     <div class="card-body">
-                      <p class="card-text">{{ offer.description }}</p>
+                      <div class="row mb-4"> 
+                        <div class="col">
+                          <p class="text-info">
+                            Fecha de finalización: {{ offer.endDate }}
+                          </p>
+                          <p class="card-text">{{ offer.description }}</p>
+                        </div>
+                      </div>
+                      <div class="row border-top pt-3">
+                        <div class="col text-center">
+                          <p class="display-3 font-weight-bolder mb-0 text-danger">5</p>
+                          <p class="text-secondary">Interesados</p>
+                        </div>
+                        <div class="col text-center">
+                          <p class="display-3 font-weight-bolder mb-0 text-success">15</p>
+                          <p class="text-secondary">Seleccionados</p>
+                        </div>
+                      </div>
                     </div>
-                    <div class="card-footer d-flex flex-row p-1">
-                      <button type="button" class="btn btn-info mr-2">
-                        <svg class="bi text-white" width="26" height="26" fill="currentColor" (click)=offerUpdate(offer)>
-                          <use xlink:href="bootstrap-icons.svg#pencil" />
-                        </svg>
-                      </button>
-                      <button type="button" class="btn btn-warning mr-2">
-                        <svg class="bi text-white" width="26" height="26" fill="currentColor" (click)=offerDuplicate(offer)>
-                          <use xlink:href="bootstrap-icons.svg#files" />
-                        </svg>
-                      </button>
-                      <button type="button" class="btn btn-danger">
-                        <svg class="bi text-white" width="26" height="26" fill="currentColor" (click)=offerDelete(offer.id)>
-                          <use xlink:href="bootstrap-icons.svg#x" />
-                        </svg>
-                      </button>
+                    <div class="card-footer p-0">
+                      <div class="btn-group w-100">
+                        <button type="button" class="btn btn-info rounded-0">
+                          <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerUpdate(offer)>
+                            <use xlink:href="bootstrap-icons.svg#pencil" />
+                          </svg>
+                        </button>
+                        <button type="button" class="btn btn-info">
+                          <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDuplicate(offer)>
+                            <use xlink:href="bootstrap-icons.svg#files" />
+                          </svg>
+                        </button>
+                        <button type="button" class="btn btn-info rounded-0">
+                          <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDelete(offer.id)>
+                            <use xlink:href="bootstrap-icons.svg#x" />
+                          </svg>
+                        </button>
+                        <button type="button" class="btn btn-success rounded-0">
+                          <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDelete(offer.id)>
+                            <use xlink:href="bootstrap-icons.svg#check-square" />
+                          </svg>
+                        </button>
+                      </div>
                     </div>
                   </div>
                 </div>
