--- a/src/app/pages/company/company-offer/modal/offer-duplicate/offer-duplicate.component.html
+++ b/src/app/pages/company/company-offer/modal/offer-duplicate/offer-duplicate.component.html
@@ -1,52 +1,73 @@
 <div class="modal-header bg-info text-white">
-    <h4 class="modal-title" id="modal-basic-title">Duplicar oferta</h4>
-    <button type="button" class="close" aria-label="Close" (click)="activeModal.close('Cross click')">
-      <svg class="bi text-white" width="32" height="32" fill="currentColor">
-        <use xlink:href="bootstrap-icons.svg#x" />
-      </svg>
-    </button>
-  </div>
-  <div class="modal-body">
-    <form novalidate (ngSubmit)="onSubmit()" [formGroup]="contactForm">
+  <h4 class="modal-title" id="modal-basic-title">Duplicar oferta</h4>
+  <button type="button" class="close" aria-label="Close" (click)="activeModal.close('Cross click')">
+    <svg class="bi text-white" width="32" height="32" fill="currentColor">
+      <use xlink:href="bootstrap-icons.svg#x" />
+    </svg>
+  </button>
+</div>
+<div class="modal-body">
+  <form novalidate (ngSubmit)="onSubmit()" [formGroup]="contactForm">
+    <div class="form-group">
+      <label for="name">Nombre de la oferta</label>
       <div class="form-group">
-        <label for="firstname">Nombre de la oferta</label>
-        <div class="input-group">
-          <input id="name" class="form-control" formControlName="name" [(ngModel)]="offerU.name">
+        <input id="name" class="form-control" formControlName="name" [class]="isValidField('name')" [(ngModel)]="offerU.name">
+        <div *ngIf="submitted && form.name.errors">
+          <div *ngIf="form.name.errors.required" class="text-danger">El nombre no puede estar vacio</div>
         </div>
       </div>
-      <div class="form-group">
-        <label for="lastname">Vacantes</label>
-        <div class="input-group">
-          <input id="vacant" class="form-control" formControlName="vacant" [(ngModel)]="offerU.vacant">
+    </div>
+    <div class="form-group">
+      <label for="areaDescription">Ciclo al que pertenece</label>
+      <select class="form-control" id="areaDescription" formControlName="areaDescription"
+        [class]="isValidField('areaDescription')" [(ngModel)]="offerU.areaDescription">
+        <option value="">Selecciona ciclo</option>
+        <option *ngFor="let area of areas" value="{{ area.description }}">{{ area.description }}</option>
+      </select>
+      <div *ngIf="submitted && form.name.errors">
+        <div *ngIf="form.name.errors.required" class="text-danger">Seleccione un ciclo</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="vacant">Vacantes</label>
+      <input id="vacant" class="form-control" formControlName="vacant" [class]="isValidField('vacant')" [(ngModel)]="offerU.vacant">
+      <div *ngIf="submitted && form.vacant.errors">
+        <div *ngIf="form.vacant.errors.required" class="text-danger">Las vacantes no pueden estar vacias</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="startDAte">Fecha inicio</label>
+      <input type="date" id="startDate" class="form-control" formControlName="startDate" [class]="isValidField('startDate')" [(ngModel)]="offerU.startDate">
+      <div *ngIf="submitted && form.startDate.errors">
+        <div *ngIf="form.startDate.errors.required" class="text-danger">La fecha no puede estar vacia</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="endDate">Fecha de fin</label>
+      <input type="date" id="endDate" class="form-control" formControlName="endDate" [class]="isValidField('endDate')" [(ngModel)]="offerU.endDate">
+      <div *ngIf="submitted && form.endDate.errors">
+        <div *ngIf="form.endDate.errors.required" class="text-danger">La fecha no puede estar vacia</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="description">Descripción</label>
+      <div class="text-group">
+        <textarea id="description" class="form-control" formControlName="description" [class]="isValidField('description')" [(ngModel)]="offerU.description"></textarea>
+        <div *ngIf="submitted && form.description.errors">
+          <div *ngIf="form.description.errors.required" class="text-danger">La descripción no puede estar vacia</div>
         </div>
       </div>
-      <div class="form-group">
-        <label for="department">Fecha inicio</label>
-        <div class="input-group">
-          <input type="date" id="starDate" class="form-control" formControlName="startDate" [(ngModel)]="offerU.startDate">
-        </div>
-      </div>
-      <div class="form-group">
-        <label>Fecha de fin</label>
-        <div class="input-group">
-          <input type="date" id="email2" class="form-control" formControlName="endDate" [(ngModel)]="offerU.endDate">
-        </div>
-      </div>
-      <div class="form-group">
-        <label>Descripción</label>
-        <div class="text-group">
-          <textarea id="description" class="form-control" formControlName="description" [(ngModel)]="offerU.description"></textarea>
-        </div>
-      </div>
-      <div class="text-right">
-        <button type="submit" class="btn btn-info">
-          Guardar
-          <svg class="bi text-white" width="14" height="14" fill="currentColor">
-            <use xlink:href="bootstrap-icons.svg#save" />
-          </svg>
-        </button>
-      </div>
-    </form>
-  
-  </div>
-  
+    </div>
+    <div class="text-right">
+      <button type="submit" class="btn btn-info">
+        Guardar
+        <svg class="bi text-white" width="14" height="14" fill="currentColor">
+          <use xlink:href="bootstrap-icons.svg#save" />
+        </svg>
+      </button>
+    </div>
+  </form>
+
+</div>
+
+
