--- a/src/app/pages/company/company-offer/modal/offer-new/offer-new.component.html
+++ b/src/app/pages/company/company-offer/modal/offer-new/offer-new.component.html
@@ -9,33 +9,53 @@
 <div class="modal-body">
   <form novalidate (ngSubmit)="onSubmit()" [formGroup]="contactForm">
     <div class="form-group">
-      <label for="firstname">Nombre de la oferta</label>
-      <div class="input-group">
-        <input id="nanme" class="form-control" formControlName="name">
+      <label for="name">Nombre de la oferta</label>
+      <div class="form-group">
+        <input id="name" class="form-control" formControlName="name" [class]="isValidField('name')">
+        <div *ngIf="submitted && form.name.errors">
+          <div *ngIf="form.name.errors.required" class="text-danger">El nombre no puede estar vacio</div>
+        </div>
       </div>
     </div>
     <div class="form-group">
-      <label for="lastname">Vacantes</label>
-      <div class="input-group">
-        <input id="vacant" class="form-control" formControlName="vacant">
+      <label for="areaDescription">Ciclo al que pertenece</label>
+      <select class="form-control" id="areaDescription" formControlName="areaDescription"
+        [class]="isValidField('areaDescription')">
+        <option value="">Selecciona ciclo</option>
+        <option *ngFor="let area of areas" value="{{ area.description }}">{{ area.description }}</option>
+      </select>
+      <div *ngIf="submitted && form.name.errors">
+        <div *ngIf="form.name.errors.required" class="text-danger">Seleccione un ciclo</div>
       </div>
     </div>
     <div class="form-group">
-      <label for="department">Fecha inicio</label>
-      <div class="input-group">
-        <input type="date" id="starDate" class="form-control" formControlName="startDate">
+      <label for="vacant">Vacantes</label>
+      <input id="vacant" class="form-control" formControlName="vacant" [class]="isValidField('vacant')">
+      <div *ngIf="submitted && form.vacant.errors">
+        <div *ngIf="form.vacant.errors.required" class="text-danger">Las vacantes no pueden estar vacias</div>
       </div>
     </div>
     <div class="form-group">
-      <label>Fecha de fin</label>
-      <div class="input-group">
-        <input type="date" id="email2" class="form-control" formControlName="endDate">
+      <label for="startDAte">Fecha inicio</label>
+      <input type="date" id="startDate" class="form-control" formControlName="startDate" [class]="isValidField('startDate')">
+      <div *ngIf="submitted && form.startDate.errors">
+        <div *ngIf="form.startDate.errors.required" class="text-danger">La fecha no puede estar vacia</div>
       </div>
     </div>
     <div class="form-group">
-      <label>Descripción</label>
+      <label for="endDate">Fecha de fin</label>
+      <input type="date" id="endDate" class="form-control" formControlName="endDate" [class]="isValidField('endDate')">
+      <div *ngIf="submitted && form.endDate.errors">
+        <div *ngIf="form.endDate.errors.required" class="text-danger">La fecha no puede estar vacia</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="description">Descripción</label>
       <div class="text-group">
-        <textarea id="description" class="form-control" formControlName="description"></textarea>
+        <textarea id="description" class="form-control" formControlName="description" [class]="isValidField('description')"></textarea>
+        <div *ngIf="submitted && form.description.errors">
+          <div *ngIf="form.description.errors.required" class="text-danger">La descripción no puede estar vacia</div>
+        </div>
       </div>
     </div>
     <div class="text-right">
