--- a/src/app/pages/company/company-offer/company-offer.component.html
+++ b/src/app/pages/company/company-offer/company-offer.component.html
@@ -20,9 +20,9 @@
             <div class="card-header bg-info">
               <div class="d-flex align-items-center">
                 <h2 class="card-title text-white font-weight-bold my-2 mr-3">Ofertas</h2>
-                <div class="custom-control custom-switch">
-                  <input type="checkbox" class="custom-control-input" id="isActiveOffer" checked>
-                  <label class="custom-control-label" for="isActiveOffer">Ofertas Activas</label>
+                <div class="custom-control custom-switch" (change)="activeOffer()">
+                  <input type="checkbox" class="custom-control-input" id="activeOffer" checked>
+                  <label class="custom-control-label" for="activeOffer" id="labelActiveOffer">Activas</label>
                 </div>
               </div>
               <a class="rounded-circle position-absolute border border-white bg-info" (click)=offerNew()>
@@ -34,59 +34,119 @@
             <div class="card-body mt-2">
               <!-- Oferta -->
               <div class="row">
-                <div class="col-sm-6" *ngFor="let offer of offers; index as i">
-                  <div class="card m-2 mb-4 border-info shadow">
-                    <div class="card-header bg-info text-white">
-                      <h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}</h3>
-                      <span class="badge badge-light text-info mr-2">{{ offer.areaDescription }}</span>
-                      <span class="text-white font-weight-bolder">Vacantes: {{ offer.vacant }}</span>
-                    </div>
-                    <div class="card-body">
-                      <div class="row mb-4"> 
-                        <div class="col">
-                          <p class="text-info">
-                            Fecha de finalización: {{ offer.endDate }}
-                          </p>
-                          <p class="card-text">{{ offer.description }}</p>
+                <!-- Se muestra para las ofertas activas -->
+                <ng-container *ngIf="active">
+                  <div class="col-sm-6" *ngFor="let offer of actOffers; index as i">
+                    <div class="card m-2 mb-4 border-info shadow">
+                      <div class="card-header bg-info text-white">
+                        <h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}</h3>
+                        <span class="badge badge-light text-info mr-2">{{ offer.areaDescription }}</span>
+                        <span class="text-white font-weight-bolder">Vacantes: {{ offer.vacant }}</span>
+                      </div>
+                      <div class="card-body">
+                        <div class="row mb-4"> 
+                          <div class="col">
+                            <p class="text-info">
+                              Fecha de finalización: {{ offer.endDate }}
+                            </p>
+                            <p class="card-text">{{ offer.description }}</p>
+                          </div>
+                        </div>
+                        <div class="row border-top pt-3">
+                          <div class="col text-center">
+                            <p class="display-3 font-weight-bolder mb-0 text-danger">5</p>
+                            <p class="text-secondary">Interesados</p>
+                          </div>
+                          <div class="col text-center">
+                            <p class="display-3 font-weight-bolder mb-0 text-success">15</p>
+                            <p class="text-secondary">Seleccionados</p>
+                          </div>
                         </div>
                       </div>
-                      <div class="row border-top pt-3">
-                        <div class="col text-center">
-                          <p class="display-3 font-weight-bolder mb-0 text-danger">5</p>
-                          <p class="text-secondary">Interesados</p>
+                      <div class="card-footer p-0">
+                        <div class="btn-group w-100">
+                          <button type="button" class="btn btn-info rounded-0">
+                            <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerUpdate(offer)>
+                              <use xlink:href="bootstrap-icons.svg#pencil" />
+                            </svg>
+                          </button>
+                          <button type="button" class="btn btn-info">
+                            <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDuplicate(offer)>
+                              <use xlink:href="bootstrap-icons.svg#files" />
+                            </svg>
+                          </button>
+                          <button type="button" class="btn btn-info rounded-0">
+                            <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDelete(offer.id)>
+                              <use xlink:href="bootstrap-icons.svg#x" />
+                            </svg>
+                          </button>
+                          <button type="button" class="btn btn-success rounded-0">
+                            <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDesactive(offer.id)>
+                              <use xlink:href="bootstrap-icons.svg#check-square" />
+                            </svg>
+                          </button>
                         </div>
-                        <div class="col text-center">
-                          <p class="display-3 font-weight-bolder mb-0 text-success">15</p>
-                          <p class="text-secondary">Seleccionados</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card-footer p-0">
-                      <div class="btn-group w-100">
-                        <button type="button" class="btn btn-info rounded-0">
-                          <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerUpdate(offer)>
-                            <use xlink:href="bootstrap-icons.svg#pencil" />
-                          </svg>
-                        </button>
-                        <button type="button" class="btn btn-info">
-                          <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDuplicate(offer)>
-                            <use xlink:href="bootstrap-icons.svg#files" />
-                          </svg>
-                        </button>
-                        <button type="button" class="btn btn-info rounded-0">
-                          <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDelete(offer.id)>
-                            <use xlink:href="bootstrap-icons.svg#x" />
-                          </svg>
-                        </button>
-                        <button type="button" class="btn btn-success rounded-0">
-                          <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDelete(offer.id)>
-                            <use xlink:href="bootstrap-icons.svg#check-square" />
-                          </svg>
-                        </button>
                       </div>
                     </div>
                   </div>
-                </div>
+                </ng-container>
+                <!-- Se muestra para las offertas -->
+                <ng-container *ngIf="!active">
+                  <div class="col-sm-6" *ngFor="let offer of desOffers; index as i">
+                    <div class="card m-2 mb-4 border-info shadow">
+                      <div class="card-header bg-info text-white">
+                        <h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}</h3>
+                        <span class="badge badge-light text-info mr-2">{{ offer.areaDescription }}</span>
+                        <span class="text-white font-weight-bolder">Vacantes: {{ offer.vacant }}</span>
+                      </div>
+                      <div class="card-body">
+                        <div class="row mb-4"> 
+                          <div class="col">
+                            <p class="text-info">
+                              Fecha de finalización: {{ offer.endDate }}
+                            </p>
+                            <p class="card-text">{{ offer.description }}</p>
+                          </div>
+                        </div>
+                        <div class="row border-top pt-3">
+                          <div class="col text-center">
+                            <p class="display-3 font-weight-bolder mb-0 text-danger">5</p>
+                            <p class="text-secondary">Interesados</p>
+                          </div>
+                          <div class="col text-center">
+                            <p class="display-3 font-weight-bolder mb-0 text-success">15</p>
+                            <p class="text-secondary">Seleccionados</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card-footer p-0">
+                        <div class="btn-group w-100">
+                          <button type="button" class="btn btn-info rounded-0">
+                            <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerUpdate(offer)>
+                              <use xlink:href="bootstrap-icons.svg#pencil" />
+                            </svg>
+                          </button>
+                          <button type="button" class="btn btn-info">
+                            <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDuplicate(offer)>
+                              <use xlink:href="bootstrap-icons.svg#files" />
+                            </svg>
+                          </button>
+                          <button type="button" class="btn btn-info rounded-0">
+                            <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerDelete(offer.id)>
+                              <use xlink:href="bootstrap-icons.svg#x" />
+                            </svg>
+                          </button>
+                          <button type="button" class="btn btn-danger rounded-0">
+                            <svg class="bi" width="26" height="26" fill="currentColor" (click)=offerActive(offer.id)>
+                              <use xlink:href="bootstrap-icons.svg#square" />
+                            </svg>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </ng-container>
+
               </div>
 
             </div>
