--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -43,7 +43,8 @@
                     <div>{{message}}</div>
                   </form>
             </div>
-
         </div>
+
     </div>
+  </div>
 </div>
