--- a/src/app/pages/company/crear-perfil/crear-perfil.component.html
+++ b/src/app/pages/company/crear-perfil/crear-perfil.component.html
@@ -1,8 +1,9 @@
 <form novalidate class="mt-4 mb-4" (ngSubmit)="onSave()" [formGroup]="companyInfoForm">
     <div class="form-row">
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-6">
             <label>CIF:</label>
-            <input type="text" class="form-control" placeholder="CIF" formControlName="cif" [class]="isValidField('cif')">
+            <input type="text" class="form-control" placeholder="CIF" formControlName="cif"
+                [class]="isValidField('cif')">
             <div class="invalid-feedback">
                 <span *ngIf="companyInfoForm.get('cif').errors?.required">
                     Por favor introduzca su CIF
@@ -14,25 +15,32 @@
                 </span>
             </div>
         </div>
-        <div class="form-group col-md-8 ">
-            <label>Sector:</label>
-            <input type="text " class="form-control " placeholder="Sector de trabajo " formControlName="sector " [class]="isValidField( 'sector') ">
-            <div class="invalid-feedback ">
-                <span *ngIf="companyInfoForm.get( 'sector').errors?.required ">
-                    Por favor introduzca su sector de trabajo
-                </span>
+        <div class="form-group col-md-6 ">
+            <label>Fecha de fundacion:</label>
+            <div class="input-group">
+                <input class="form-control" placeholder="yyyy-mm-dd" formControlName="birthdate" [(ngModel)]="model"
+                    ngbDatepicker #d="ngbDatepicker" [class]="isValidField('birthdate')">
+                <div class="input-group-append">
+                    <!--Poner icono manual-->
+                    <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
+                        <svg class="bi text-info" width="18" height="18" fill="currentColor">
+                            <use xlink:href="bootstrap-icons.svg#calendar-date" />
+                        </svg>
+                    </button>
+                </div>
             </div>
             <div class="invalid-feedback ">
-                <span *ngIf="companyInfoForm.get( 'sector').errors?.pattern ">
+                <span *ngIf="companyInfoForm.get('sector').errors?.pattern">
                     Por favor introduzca su sector correctamente
                 </span>
             </div>
         </div>
     </div>
     <div class="form-row ">
-        <div class="form-group col-md-8">
-            <label>Nombre de la empresa:</label>
-            <input type="text" class="form-control" placeholder="Nombre" formControlName="name" [class]="isValidField('name')">
+        <div class="form-group col-md-6">
+            <label>Nombre:</label>
+            <input type="text" class="form-control" placeholder="Nombre" formControlName="name"
+                [class]="isValidField('name')">
             <div class=" invalid-feedback ">
                 <span *ngIf="companyInfoForm.get( 'name').errors?.required ">
                     Por favor introduzca su nombre
@@ -44,22 +52,13 @@
                 </span>
             </div>
         </div>
-        <div class="form-group col-md-4 ">
-            <label>Fecha de fundacion:</label>
-            <div class="input-group">
-                <input class="form-control" placeholder="yyyy-mm-dd" formControlName="birthdate" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" [class]="isValidField('birthdate')">
-                <div class="input-group-append">
-                    <!--Poner icono manual-->
-                    <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
-                       <svg class="bi text-info" width="18" height="18" fill="currentColor">
-                            <use xlink:href="bootstrap-icons.svg#calendar-date" />
-                        </svg>
-                    </button>
-                </div>
-            </div>
-            <div class="invalid-feedback">
-                <span *ngIf="companyInfoForm.get('birthdate').errors?.required">
-                    Debe introducir una fecha
+        <div class="form-group col-md-6">
+            <label>Sector:</label>
+            <input type="text " class="form-control " placeholder="Sector de trabajo " formControlName="sector"
+                [class]="isValidField('sector')">
+            <div class="invalid-feedback ">
+                <span *ngIf="companyInfoForm.get('sector').errors?.required">
+                    Por favor introduzca su sector de trabajo
                 </span>
             </div>
         </div>
@@ -67,15 +66,22 @@
     <div class="form-row">
         <div class="form-group col-md-12 ">
             <label>Descripcion:</label>
-            <textarea style="resize: none;" name="description" cols="15" rows="10" class="form-control " placeholder="Introduce una breve descripcion de la empresa" [class]="isValidField( 'description') "></textarea>
-
+            <textarea style="resize: none;" name="description" cols="15" rows="10" class="form-control "
+                placeholder="Introduce una breve descripcion de la empresa" formControlName="description"
+                [class]="isValidField('description') "></textarea>
             <div class="invalid-feedback ">
-                <span *ngIf="companyInfoForm.get( 'description').errors?.required ">
+                <span *ngIf="companyInfoForm.get('description').errors?.required ">
                     Debe describir su empresa
+                </span>
+                <span *ngIf="companyInfoForm.get('description').errors?.minlength">
+                    Sus aptitudes deben contener mas de
+                    {{companyInfoForm.get('description').errors?.minlength?.requiredLength}} carácteres
+                </span>
+                <span *ngIf="companyInfoForm.get('description').errors?.maxlength">
+                    Sus aptitudes deben contener máximo
+                    {{companyInfoForm.get('description').errors?.maxlength?.requiredLength}} carácteres
                 </span>
             </div>
         </div>
     </div>
-    <button type="submit " class="btn btn-primary btn-block ">Confirmar</button>
-
 </form>
