--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="container my-3">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-10">
             <div class="card">
                 <div class="card-header  bg-info ">
                     <h2 class="card-title text-white mb-0">Registro</h2>
@@ -8,7 +8,7 @@
                 <div class="card-body"></div>
                 <form [formGroup]="registerForm" novalidate (ngSubmit)="onSave()" class="mt-4 mb-4" method="POST">
                     <div class="form-row">
-                        <div class="form-group col-md-8 mx-auto">
+                        <div class="form-group col-10 col-sm-8 mx-auto">
                             <label>E-mail:</label>
                             <input type="email" class="form-control" formControlName="email"
                                 [class]="isValidField('email')">
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="form-group col-md-8 mx-auto">
+                        <div class="form-group col-10 col-sm-8 mx-auto">
                             <label>Contraseña:</label>
                             <input type="password" class="form-control" formControlName="password"
                                 [class]="isValidField('password')">
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="form-group col-md-8 mx-auto">
+                        <div class="form-group col-10 col-sm-8 mx-auto">
                             <label>Seleccione el tipo: </label>
                             <select name="tipo" formControlName="condicion">
                                 <option value="student">Alumno</option>
@@ -50,10 +50,13 @@
                             </select>
                         </div>
                     </div>
-                    <div *ngIf="registerForm.get('condicion').value === 'student'">
+                    <div class="col-10 col-sm-8 p-0 mx-auto" *ngIf="registerForm.get('condicion').value === 'student'">
                         <perfil-al></perfil-al>
                     </div>
-                    <div class="col-md-4 mx-auto">
+                    <div class="col-10 col-sm-8 p-0 mx-auto" *ngIf="registerForm.get('condicion').value === 'company'">
+                        <app-crear-perfil></app-crear-perfil>
+                    </div>
+                    <div class="col-12 col-sm-8 col-md-4 mx-auto">
                         <button type="submit " class="btn btn-primary btn-block ">Registrarse</button>
                     </div>
                 </form>
