--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,7 @@
-<div class="container my-3">
+<div *ngIf="!areas?.length" class=" container my-3">
+    <app-load-spinner></app-load-spinner>
+</div>
+<div *ngIf="areas?.length>0" class="container my-3">
     <div class="row justify-content-center">
         <div class="col-10">
             <div class="card">
