--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
           <li>
             <a *ngIf="rol_id==1" href="#">Ver perfil</a>
             <a *ngIf="rol_id==2" href="#">Ver perfil</a>
-            <a *ngIf="rol_id==3" href="alumno/perfil">Ver perfil</a>
+            <a *ngIf="rol_id==3" routerLink="../perfil">Ver perfil</a>
             <a *ngIf="rol_id==4" href="">Ver perfil</a>
           </li>
           <li>
