--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,65 +1,27 @@
 <!-- Header -->
-<div class="jumbotron jumbotron-fluid p-5">
-  <h1 class="display-4">Bolsa de trabajo</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
-    content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
-    <a class="btn btn-info btn-lg" href="#" role="button">Learn more</a>
-  </p>
-</div>
+<div class="container-fluid pt-3 zindex-dropdown ">
+    <div class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/assets/front.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/oferta.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/elearning.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
 
-<!-- Services -->
-<div class="container">
-  <div class="row">
-    <div class="col-lg-4">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
     </div>
-    <div class="col-lg-4">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
+    <!-- Info -->
+    <div class="jumbotron jumbotron-fluid p-5 mb-0">
+        <h1 class="display-4">Bolsa de trabajo</h1>
+        <p class="lead">Ofrecemos ofertas de empleo y visivilidad a todos los alumnos de CIFP Virgen de Gracia.</p>
+        <hr class="my-4">
+        <p>Somos un centro integrado de formacion profesional con un amplico catalogo de estudios .</p>
+        <p class="lead">
+            <a class="btn btn-info btn-lg" href="https://cifpvirgendegracia.com/titulaciones/" role="button">Oferta educativa</a>
+        </p>
     </div>
-    <div class="col-lg-4">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Info -->
-<div class="jumbotron jumbotron-fluid p-5 mb-0">
-  <h1 class="display-4">Pagina de prueba</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
-    content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
-    <a class="btn btn-info btn-lg" href="#" role="button">Learn more</a>
-  </p>
 </div>
