--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-light bg-info border-bottom">
+<nav class="navbar navbar-expand-md bg-info container-fluid">
     <!-- Logo -->
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="bolsatrabajo.com">
         <img src="/assets/logo.png" height="50" class="d-inline-block align-top" alt="">
     </a>
     <!-- Button responsive menu-->
