rutas netlify y home

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,36 +3,36 @@
         <div class="mx-auto pt-3">© 2021 <a class="text-dark" title="CIFP Virgen de Gracia" target="_blank" href="https://bolsatrabajo.com/">CIFP Virgen de Gracia</a>
         </div>
         <!-- Redes sociales -->
-        <ul class="list-inline mx-auto pt-3">
+        <ul class="list-inline align-content-md-start pr-2 pt-3">
             <!-- twitter -->
             <li class="list-inline-item">
                 <a class="text-dark" rel="noopener" href="https://twitter.com/cifpvirgen" onclick="javascript:window.open('https://twitter.com/cifpvirgen'); return false;"><span class="screen-reader-text">
                   <svg class="ml-1 mr-2 bi text-info" width="15" height="15" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#twitter"/>
-                  </svg>Twitter</span></a></li>
+                  </svg></span></a></li>
             <!-- facebook -->
             <li class="list-inline-item">
                 <a class="text-dark" rel="noopener" href="https://www.facebook.com/cifpVirgen/" onclick="javascript:window.open('https://www.facebook.com/cifpVirgen/'); return false;"><span class="screen-reader-text"><svg class="ml-1 mr-2 bi text-info" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#facebook" />
-                            </svg>Facebook</span></a></li>
+                            </svg></span></a></li>
             <!-- youtube -->
             <li class="list-inline-item">
                 <a class="text-dark" rel="noopener" href="https://www.youtube.com/channel/UCg4rwKhLlTZ-uo6J7ROZRpQ" onclick="javascript:window.open('https://www.youtube.com/channel/UCg4rwKhLlTZ-uo6J7ROZRpQ'); return false;"><span class="screen-reader-text">
                   <svg class="ml-1 mr-2 bi text-info" width="15" height="15" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#youtube" />
-                            </svg>YouTube</span></a></li>
+                            </svg></span></a></li>
             <!-- instagram -->
             <li class="list-inline-item">
                 <a class="text-dark" rel="noopener" href="https://www.instagram.com/cifp_virgendegracia/" onclick="javascript:window.open('https://www.instagram.com/cifp_virgendegracia/'); return false;"><span class="screen-reader-text">
                   <svg class="ml-1 mr-2 bi text-info" width="15" height="15" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#instagram" />
-                            </svg>Instagram</span></a></li>
+                            </svg></span></a></li>
             <!-- RSS -->
             <li class="list-inline-item">
                 <a class="text-dark" target="_blank" rel="noopener" href="https://cifpvirgendegracia.com/feed/"><span class="screen-reader-text">
                   <svg class="ml-1 mr-2 bi text-info" width="15" height="15" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#rss" />
-                            </svg>RSS</span></a></li>
+                            </svg></span></a></li>
         </ul>
         <!-- Fin redes sociales -->
         <!-- Copyright -->
