--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md bg-info container-fluid">
     <!-- Logo -->
-    <a class="navbar-brand" href="bolsatrabajo.com">
-        <img src="/assets/logo.png" height="50" class="d-inline-block align-top" alt="">
+    <a alt="pagina de inicio" class="navbar-brand" href="bolsatrabajo.com">
+        <img src="/assets/logo.png" alt="Logotipo del centro" height="60" class="d-inline-block align-top" alt="">
     </a>
     <!-- Button responsive menu-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
