Carga de datos en el perfil
Falta fecha

--- a/src/app/pages/alumno/view-profile/view-profile.component.html
+++ b/src/app/pages/alumno/view-profile/view-profile.component.html
@@ -3,5 +3,5 @@
     Cargando
 </div>
 <div class="container" *ngIf="can == true">
-    <perfil-al [parent]="data"></perfil-al>
+    <perfil-al [parent]="areas" [parent2]="data"></perfil-al>
 </div>
