--- a/src/app/pages/alumno/perfil/perfil-al.component.html
+++ b/src/app/pages/alumno/perfil/perfil-al.component.html
@@ -88,9 +88,10 @@
         </div>
         <div class="form-group col-md-6">
             <label>Familia:</label>
-            <!--<select formControlName="area" class="form-control" [class]="isValidField('area')" aria-label="Seleccione su modulo">
-                <option *ngFor="let area of parent" value="{{area.id}}">{{area.description}}</option>                
-            </select>-->
+            <select formControlName="area" class="form-control" [class]="isValidField('area')"
+                aria-label="Seleccione su modulo">
+                <option *ngFor="let area of parent" value="{{area.id}}">{{area.description}}</option>
+            </select>
             <div class="invalid-feedback">
                 <span *ngIf="contactForm.get('area').errors?.required">
                     Debe elegir una opción
