--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<div class="container-fluid pt-3 zindex-dropdown ">
+<div class="container-fluid  pt-3 zindex-dropdown ">
     <div class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -15,13 +15,13 @@
 
     </div>
     <!-- Info -->
-    <div class="jumbotron jumbotron-fluid p-5 mb-0">
+    <div class="jumbotron  jumbotron-fluid p-5 mb-0">
         <h1 class="display-4">Bolsa de trabajo</h1>
         <p class="lead">Ofrecemos ofertas de empleo y visivilidad a todos los alumnos de CIFP Virgen de Gracia.</p>
         <hr class="my-4">
         <p>Somos un centro integrado de formacion profesional con un amplico catalogo de estudios .</p>
         <p class="lead">
-            <a class="btn btn-info btn-lg" href="https://cifpvirgendegracia.com/titulaciones/" role="button">Oferta educativa</a>
+            <a class="btn btn-lg btn-primary " href="https://cifpvirgendegracia.com/titulaciones/" role="button">Oferta educativa</a>
         </p>
     </div>
 </div>
