--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,7 +1,8 @@
+@import "../../../styles.scss";
 ul {
     li {
         a {
-            color: gainsboro;
+            color: white;
             font-weight: bold;
             font-size: 20px;
         }
