--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,36 +1,39 @@
 <footer class="container-fluid">
-    <div class="bg-secondary row">
-        <div class="mx-auto pt-3">© 2021 <a class="text-dark" title="CIFP Virgen de Gracia" target="_blank" href="https://bolsatrabajo.com/">CIFP Virgen de Gracia</a>
+    <div class="bg-primary row text-light bold">
+        <div class="mx-auto pt-3  ">
+        © 2021
+         <a class="text-light bold" alt="CIFP Virgen de Gracia" title="CIFP Virgen de Gracia" target="_blank" href="https://bolsatrabajo.com/">CIFP Virgen de Gracia</a>
         </div>
         <!-- Redes sociales -->
         <ul class="list-inline align-content-md-start pr-2 pt-3">
             <!-- twitter -->
             <li class="list-inline-item">
-                <a class="text-dark" rel="noopener" href="https://twitter.com/cifpvirgen" onclick="javascript:window.open('https://twitter.com/cifpvirgen'); return false;"><span class="screen-reader-text">
-                  <svg class="ml-1 mr-2 bi text-info" width="15" height="15" fill="currentColor">
+                <a class="" rel="noopener" alt="twitter"  href="https://twitter.com/cifpvirgen" onclick="javascript:window.open('https://twitter.com/cifpvirgen'); return false;"><span class="screen-reader-text">
+                  <svg class="ml-1 mr-2 bi text-light" width="15" height="15" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#twitter"/>
                   </svg></span></a></li>
             <!-- facebook -->
             <li class="list-inline-item">
-                <a class="text-dark" rel="noopener" href="https://www.facebook.com/cifpVirgen/" onclick="javascript:window.open('https://www.facebook.com/cifpVirgen/'); return false;"><span class="screen-reader-text"><svg class="ml-1 mr-2 bi text-info" width="16" height="16" fill="currentColor">
+                <a class="" rel="noopener" alt="facebook" href="https://www.facebook.com/cifpVirgen/" onclick="javascript:window.open('https://www.facebook.com/cifpVirgen/'); return false;"><span class="screen-reader-text">
+                <svg class="ml-1 mr-2 bi text-light" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#facebook" />
                             </svg></span></a></li>
             <!-- youtube -->
             <li class="list-inline-item">
-                <a class="text-dark" rel="noopener" href="https://www.youtube.com/channel/UCg4rwKhLlTZ-uo6J7ROZRpQ" onclick="javascript:window.open('https://www.youtube.com/channel/UCg4rwKhLlTZ-uo6J7ROZRpQ'); return false;"><span class="screen-reader-text">
-                  <svg class="ml-1 mr-2 bi text-info" width="15" height="15" fill="currentColor">
+                <a class="" rel="noopener" alt="youtube" href="https://www.youtube.com/channel/UCg4rwKhLlTZ-uo6J7ROZRpQ" onclick="javascript:window.open('https://www.youtube.com/channel/UCg4rwKhLlTZ-uo6J7ROZRpQ'); return false;"><span class="screen-reader-text">
+                  <svg class="ml-1 mr-2 bi text-light" width="15" height="15" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#youtube" />
                             </svg></span></a></li>
             <!-- instagram -->
             <li class="list-inline-item">
-                <a class="text-dark" rel="noopener" href="https://www.instagram.com/cifp_virgendegracia/" onclick="javascript:window.open('https://www.instagram.com/cifp_virgendegracia/'); return false;"><span class="screen-reader-text">
-                  <svg class="ml-1 mr-2 bi text-info" width="15" height="15" fill="currentColor">
+                <a class="" rel="noopener" alt="instagram" href="https://www.instagram.com/cifp_virgendegracia/" onclick="javascript:window.open('https://www.instagram.com/cifp_virgendegracia/'); return false;"><span class="screen-reader-text">
+                  <svg class="ml-1 mr-2 bi text-light" width="15" height="15" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#instagram" />
                             </svg></span></a></li>
             <!-- RSS -->
             <li class="list-inline-item">
-                <a class="text-dark" target="_blank" rel="noopener" href="https://cifpvirgendegracia.com/feed/"><span class="screen-reader-text">
-                  <svg class="ml-1 mr-2 bi text-info" width="15" height="15" fill="currentColor">
+                <a class="" target="_blank" rel="noopener" alt="RSS" href="https://cifpvirgendegracia.com/feed/"><span class="screen-reader-text">
+                  <svg class="ml-1 mr-2 bi text-light " width="15" height="15" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#rss" />
                             </svg></span></a></li>
         </ul>
@@ -39,26 +42,26 @@
     </div>
     <!-- Grid container -->
     <!--Grid row-->
-    <div class="footer2 row pt-4 pb-3">
+    <div class="footerBot row pt-4 pb-3">
         <!--Grid column-->
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0 text-right">
             <h5 class="text-center widget-title">Contacto</h5>
             <hr>
             <ul class="text-left list-unstyled mb-0">
                 <li class="address">
-                    <a class="footertext" href="https://goo.gl/maps/X8EjExU2P4bZKCAS7" title="Paseo de San Gregorio, 82-84. 13500 Puertollano (Ciudad Real)." onclick="javascript:window.open('https://goo.gl/maps/X8EjExU2P4bZKCAS7'); return false;">
+                    <a  href="https://goo.gl/maps/X8EjExU2P4bZKCAS7" title="Paseo de San Gregorio, 82-84. 13500 Puertollano (Ciudad Real)." onclick="javascript:window.open('https://goo.gl/maps/X8EjExU2P4bZKCAS7'); return false;">
                         <svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#geo-alt" />
                             </svg>Paseo de San Gregorio, 82-84.<br> 13500 Puertollano <br>(Ciudad Real).</a>
                 </li>
-                <li class="mt-3 phone-number"><a class="text-dark" href="tel:926426250" title="926 42 62 50"><svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
+                <li class="mt-3 phone-number"><a href="tel:926426250" title="926 42 62 50"><svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#telephone" />
                             </svg>926 42 62 50</a></li>
-                <li class="mt-3 phone-number"><a class="text-dark" href="tel:926426251" title="926 42 62 51"><svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
+                <li class="mt-3 phone-number"><a  href="tel:926426251" title="926 42 62 51"><svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#telephone" />
                             </svg>926 42 62 51</a></li>
                 <li class="mt-3 email">
-                    <a class="text-dark" href="mailto:secretaria@cifpvirgendegracia.com" title=""> <svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
+                    <a  href="mailto:secretaria@cifpvirgendegracia.com" title=""> <svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#envelope-fill" />
                             </svg> secretaria@cifpvirgendegracia.com</a>
                 </li>
