--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,3 +1,12 @@
-.footer2 {
-    background-color: #c3c3c3;
+@import "../../../styles.scss";
+
+.footerBot{
+background-color:$secondary-light;
+  h5{
+    color:blue;
+  }
+  a{
+    color:yellow;
+  }
+
 }
