--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-md bg-info container-fluid">
+<nav class="navbar navbar-expand-md bg-primary container-fluid">
     <!-- Logo -->
-    <a alt="pagina de inicio" class="navbar-brand" routerLink="/">
+    <a alt="pagina de inicio" class="navbar-brand" routerLink="/" alt="Logotipo del centro">
         <!--*ngIf="router.url === '/'"-->
-        <img src="/assets/logo.png" alt="Logotipo del centro" height="60" class="d-inline-block align-top" alt="">
+        <img src="/assets/logo.png" alt="Logotipo del centro" height="60" class="d-inline-block align-top">
     </a>
     <!-- Button responsive menu-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
